# embedded-filesystem

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  release-please-config.json  sonar-project.properties
.github/workflows/: ci.yml  dependency-scanner.yml  linting-formatting.yml  release-please.yml  static-analysis.yml
fsal/: CMakeLists.txt
